--- a/src/app/table-comp/table-comp.component.html
+++ b/src/app/table-comp/table-comp.component.html
@@ -3,11 +3,22 @@
 </p>
 
 
-<div> Work with date </div>
-<div> {{ data.date }} </div>
+<div> Date </div>
+<div> {{ data.date | date }} </div>
+<div> {{ data.date | date:"dd/MM/yyyy" }} </div>
+<div> {{ data.date | date:"MM/dd/yyyy" }} </div>
+
 
 <br>
-<div> Work with string </div>
+<div> Number </div>
+<div> {{ data.numb | percent }} </div>
+
+<!-- by default it show USD currency -->
+<div> {{ data.numb | currency }} </div>
+
+
+<br>
+<div> String </div>
 <div> {{ data.str | uppercase }} </div>
 <div> {{ data.str | lowercase }} </div>
 
@@ -15,3 +26,8 @@
 <div> {{ data.str | slice:3 }} </div> 
 <!-- second parameter end -->
 <div> {{ data.str | slice:3:8 }} </div> 
+
+<br>
+<div> Couple pipes </div>
+<div> {{ data.str | slice:5 | uppercase }} </div>
+
