--- a/src/app/table-comp/table-comp.component.html
+++ b/src/app/table-comp/table-comp.component.html
@@ -16,8 +16,17 @@
 <!-- by default it show USD currency -->
 <div> {{ data.numb | currency }} </div>
 
+<br>
+<div> DecimalPipe</div>
+<div> {{ data.bigNumb | number:'3.1-2'}}</div>
+<div> {{ data.bigNumb | number:'4.4-5'}}</div>
+
 
 <br>
+<div> Currency </div>
+
+
+<br> <br>
 <div> String </div>
 <div> {{ data.str | uppercase }} </div>
 <div> {{ data.str | lowercase }} </div>
@@ -26,6 +35,7 @@
 <div> {{ data.str | slice:3 }} </div> 
 <!-- second parameter end -->
 <div> {{ data.str | slice:3:8 }} </div> 
+
 
 <br>
 <div> Couple pipes </div>
