--- a/src/app/table-comp/table-comp.component.html
+++ b/src/app/table-comp/table-comp.component.html
@@ -8,17 +8,15 @@
 <div> {{ data.str | uppercase }} </div>
 <div> {{ data.str | lowercase }} </div>
 
-<!-- first parameter start from -->
-<div> {{ data.str | slice:3 }} </div> 
-<!-- second parameter end -->
-<div> {{ data.str | slice:3:8 }} </div> 
+<div> Start from 3: {{ data.str | slice:3 }} </div> 
+<div> Start from 3 end 8: {{ data.str | slice:3:8 }} </div> 
 
 
 <br> <br>
 <div> Date </div>
 <div> {{ data.date | date }} </div>
-<div> {{ data.date | date:"dd/MM/yyyy" }} </div>
-<div> {{ data.date | date:"MM/dd/yyyy" }} </div>
+<div> dd/MM/yyyy {{ data.date | date:"dd/MM/yyyy" }} </div>
+<div> MM/dd/yyyy {{ data.date | date:"MM/dd/yyyy" }} </div>
 
 
 <br> <br>
